@startuml
skinparam Shadowing false
skinparam DefaultFontName Arial
skinparam BackgroundColor white
skinparam ArrowColor #4B5563

hide empty methods
skinparam classAttributeIconSize 0
left to right direction
title CD-08 - Kitchen và Dispatch
caption Mô tả route bếp, station, ticket KDS và mối nối từ order item sang ticket runtime.
skinparam class {
  BackgroundColor white
  BorderColor #374151
  ArrowColor #4B5563
  HeaderBackgroundColor #E5EEF9
}

class "Reservation" as Reservation <<entity>> {
  {static} table = reservations
  --
  reservation_id
  user_id
  applied_user_voucher_id
  row_version
  status
  deposit_status
  deposit_intent_status
}

class "ReservationOrder" as ReservationOrder <<entity>> {
  {static} table = reservation_orders
  --
  order_id
  reservation_id
  created_by
  row_version
  status
  created_at
  updated_at
}

class "ReservationOrderItem" as ReservationOrderItem <<entity>> {
  {static} table = reservation_order_items
  --
  order_item_id
  order_id
  item_id
  row_version
  status
  unit_price
  line_total
}

class "MenuCategory" as MenuCategory <<entity>> {
  {static} table = menu_categories
  --
  category_id
  name
  description
  sort_order
  is_deleted
}

class "MenuItem" as MenuItem <<entity>> {
  {static} table = menu_items
  --
  item_id
  category_id
  name
  created_at
  updated_at
  code
  description
}

class "KitchenStation" as KitchenStation <<entity>> {
  {static} table = kitchen_stations
  --
  station_id
  name
  created_at
  updated_at
  code
  description
  output_mode
}

class "KitchenStationCategoryRoute" as KitchenStationCategoryRoute <<entity>> {
  {static} table = kitchen_station_category_routes
  --
  route_id
  station_id
  category_id
  created_at
  updated_at
  sort_order
  is_active
}

class "KitchenOrderItemTicket" as KitchenOrderItemTicket <<entity>> {
  {static} table = kitchen_order_item_tickets
  --
  ticket_id
  station_id
  order_id
  reservation_id
  order_item_id
  item_id
  route_id
}

class "KitchenRoutingService" as KitchenRoutingService <<control>> {
  orchestrates flow
}

class "StaffOrderItemLifecycleService" as StaffOrderItemLifecycleService <<control>> {
  orchestrates flow
}

Reservation "1" --> "0..*" ReservationOrder : orders\nFK: reservation_id
ReservationOrder "1" --> "0..*" ReservationOrderItem : items\nFK: order_id
ReservationOrderItem "0..*" --> "1" MenuItem : item\nFK: item_id
MenuCategory "1" --> "0..*" MenuItem : items\nFK: category_id
KitchenStation "1" --> "0..*" KitchenStationCategoryRoute : categoryRoutes\nFK: station_id
KitchenStation "1" --> "0..*" KitchenOrderItemTicket : tickets\nFK: station_id
KitchenStationCategoryRoute "0..*" --> "1" MenuCategory : category\nFK: category_id
KitchenOrderItemTicket "0..*" --> "1" KitchenStationCategoryRoute : route\nFK: route_id
KitchenOrderItemTicket "0..*" --> "1" ReservationOrder : order\nFK: order_id
KitchenOrderItemTicket "0..*" --> "1" Reservation : reservation\nFK: reservation_id
KitchenOrderItemTicket "0..*" --> "1" ReservationOrderItem : orderItem\nFK: order_item_id
KitchenOrderItemTicket "0..*" --> "1" MenuItem : item\nFK: item_id
KitchenRoutingService ..> Reservation : uses
StaffOrderItemLifecycleService ..> Reservation : uses
@enduml
